# GeometryCentral-libigl-playground

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: CMakeLists.txt
src/imguiext/: ImGuiHelpers.h  ImGuiMenu.cpp  ImGuiMenu.h  ImGuiPlugin.cpp  ImGuiPlugin.h  ImGuiTraits.h  ImGuiWidget.h  ImGuizmoWidget.cpp  ImGuizmoWidget.h  SelectionWidget.cpp  SelectionWidget.h
tutorial/: CMakeLists.txt
tutorial/101-LoadMesh/: main.cpp
tutorial/102-BasicMutation/: main.cpp
tutorial/103-DirectionFields/: main.cpp
tutorial/104-DrawMesh/: main.cpp
tutorial/105-ViewerMenu/: main.cpp
tutorial/106-ImGuizmo/: main.cpp
tutorial/107-Events/: main.cpp
tutorial/108-Selection/: main.cpp
